[package]
name = "websockets-monoio"
version = "0.1.1"
edition = "2024"
description = "Monoio (io_uring) WebSocket client built on fastwebsockets with wss support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChetanBhasin/websockets-monoio"
documentation = "https://docs.rs/websockets-monoio"
homepage = "https://github.com/ChetanBhasin/websockets-monoio"
readme = "README.md"
keywords = ["websocket", "monoio", "io_uring", "async", "tls"]
categories = ["network-programming", "asynchronous", "web-programming"]
authors = ["Chetan Bhasin <chetan@example.com>"]
rust-version = "1.90.0"

[package.metadata.docs.rs]
# Build docs with all features enabled
all-features = true
# Use nightly for better docs (enables unstable doc features)
rustdoc-args = ["--cfg", "docsrs"]
# Build for Linux target (where io_uring works best)
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "2"
url = "2"
monoio = "0.2"
rustls = { version = "0.23", features = ["ring"] }
http = "1"
fastwebsockets = "0.10"
webpki = "0.22.4"
webpki-roots = "1.0"
monoio-rustls = "0.4.0"
hyper = "1.7.0"
monoio-compat = "0.2"
http-body-util = "0.1.3"
bytes = "1.10.1"
tokio = { version = "1", default-features = false, features = ["io-util"] }
base64 = "0.22"
memchr = "2"
rand = "0.9.2"
sha1 = "0.10.6"
anyhow = "1.0.100"
httparse = "1.8"
smallvec = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async"] }

[[bench]]
name = "perf"
harness = false
